sdk/userspace/include/hal/fpga_common.h

/**
 * Common FPGA command flags.
 */
enum {
	/** reserved */
	FPGA_CMD_RSVD = 1 << 0,
	/** return FPGA image hardware metrics */
	FPGA_CMD_GET_HW_METRICS = 1 << 1,
	/** return FPGA image hardware metrics (clear on read */
	FPGA_CMD_CLEAR_HW_METRICS = 1 << 2,
	FPGA_CMD_FORCE_SHELL_RELOAD = 1 << 3,
	/** request that ddr data retention is used during load */
	FPGA_CMD_DRAM_DATA_RETENTION = 1 << 4,
	FPGA_CMD_EXTENDED_METRICS_SIZE = 1 << 6,
	FPGA_CMD_PREFETCH = 1 << 7,



	FPGA_CMD_ALL_FLAGS = FPGA_CMD_GET_HW_METRICS |
		FPGA_CMD_CLEAR_HW_METRICS |
		FPGA_CMD_FORCE_SHELL_RELOAD |
		FPGA_CMD_DRAM_DATA_RETENTION |
		FPGA_CMD_EXTENDED_METRICS_SIZE |
		FPGA_CMD_PREFETCH,
};
/**
 * FPGA slot specification PCI resource map
 */
struct fpga_pci_resource_map {
	/** These can be used for sanity checking prior to the attach */
	uint16_t vendor_id;
	uint16_t device_id;
	uint16_t subsystem_device_id;
	uint16_t subsystem_vendor_id;

	/** e.g. PCI Domain:Bus:Device.Function */
	uint16_t  domain;
	uint8_t   bus;
	uint8_t   dev;
	uint8_t   func;

	/** resource for each bar */
	bool      resource_burstable[FPGA_BAR_PER_PF_MAX]; /* if the PCI BAR has WC attribute */
	uint64_t  resource_size[FPGA_BAR_PER_PF_MAX];
} __attribute((packed));
/**
 * FPGA slot specification with two PFs:
 *  Application PF, Management PF
 */
struct fpga_slot_spec {
	struct fpga_pci_resource_map map[FPGA_PF_MAX];
} __attribute__((packed));
/**
 * AFI vendor/device/subsytem vendor/subsystem IDs.
 * e.g. the expected PCI IDs for a loaded AFI.
 */
struct afi_device_ids {
	uint16_t	vendor_id;
	uint16_t	device_id;
	uint16_t	svid;
	uint16_t	ssid;
} __attribute__((packed));
/** FPGA metadata ids */
struct fpga_meta_ids {
	/** Null terminated, and zero padded */
	char		afi_id[AFI_ID_STR_MAX];
	/** Expected PCI IDs for a loaded AFI */
	struct afi_device_ids afi_device_ids;
} __attribute__((packed));
/** FPGA DDR interface metrics */
struct fpga_ddr_if_metrics_common {
	uint64_t    write_count;
	uint64_t    read_count;
} __attribute__((packed));
/** FPGA clock metrics common */
struct fpga_clocks_common {
    uint64_t    frequency[FPGA_MMCM_OUT_CLKS_MAX];
} __attribute__((packed));
/** FPGA metrics */
struct fpga_metrics_common {
	/** See FPGA_INT_STATUS_XYZ below */
	uint32_t int_status;
	/** See FPGA_PAP_XYZ below */
	uint32_t pcim_axi_protocol_error_status;
	/** FPGA_INT_STATUS_DMA_PCI_SLAVE_TIMEOUT: address and count */
	uint64_t dma_pcis_timeout_addr;
	uint32_t dma_pcis_timeout_count;
	/** FPGA_INT_STATUS_PCI_MASTER_RANGE_ERROR: address and count */
	uint64_t pcim_range_error_addr;
	uint32_t pcim_range_error_count;
	/** FPGA_INT_STATUS_PCI_MASTER_AXI_PROTOCOL_ERROR: address and count */
	uint64_t pcim_axi_protocol_error_addr;
	uint32_t pcim_axi_protocol_error_count;
	/** reserved */
	uint8_t reserved2[12];
	/** FPGA_INT_STATUS_OCL_SLAVE_TIMEOUT: address and count */
	uint64_t ocl_slave_timeout_addr;
	uint32_t ocl_slave_timeout_count;
	/** FPGA_INT_STATUS_BAR1_SLAVE_TIMEOUT: address and count */
	uint64_t bar1_slave_timeout_addr;
	uint32_t bar1_slave_timeout_count;
	/** FPGA_INT_STATUS_SDACL_SLAVE_TIMEOUT: address and count */
	uint32_t sdacl_slave_timeout_addr;
	uint32_t sdacl_slave_timeout_count;
	/** FPGA_INT_STATUS_VIRTUAL_JTAG_SLAVE_TIMEOUT: address and count */
	uint32_t virtual_jtag_slave_timeout_addr;
	uint32_t virtual_jtag_slave_timeout_count;
	/** PCI read and write counts */
	uint64_t pcim_write_count;
	uint64_t pcim_read_count;

	/** FPGA DDR interface metrics */
	struct fpga_ddr_if_metrics_common ddr_ifs[FPGA_DDR_IFS_MAX];

	/** FPGA clock metrics */
	struct fpga_clocks_common clocks[FPGA_MMCM_GROUP_MAX];

	/** Power data from the microcontroller */
	uint64_t power_mean;
	uint64_t power_max;
	uint64_t power;
	uint64_t cached_agfis[FPGA_CACHED_AGFIS_MAX];
	uint64_t flags;
} __attribute__((packed));