sdk/userspace/python_bindings/fpga_mgmt.py

#
# Copyright 2015-2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License"). You may
# not use this file except in compliance with the License. A copy of the
# License is located at
#
#     http://aws.amazon.com/apache2.0/
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.
#
# Python bindings for mgmt library
# -*- coding: utf-8 -*-
#
# WORD_SIZE is: 8
# POINTER_SIZE is: 8
# LONGDOUBLE_SIZE is: 16
#
import ctypes


_libraries = {}
_libraries['libfpga_mgmt.so'] = ctypes.CDLL('libfpga_mgmt.so')
# if local wordsize is same as target, keep ctypes pointer function.
if ctypes.sizeof(ctypes.c_void_p) == 8:
    POINTER_T = ctypes.POINTER
else:
    # required to access _ctypes
    import _ctypes
    # Emulate a pointer class using the approriate c_int32/c_int64 type
    # The new class should have :
    # ['__module__', 'from_param', '_type_', '__dict__', '__weakref__', '__doc__']
    # but the class should be submitted to a unique instance for each base type
    # to that if A == B, POINTER_T(A) == POINTER_T(B)
    ctypes._pointer_t_type_cache = {}
    def POINTER_T(pointee):
        # a pointer should have the same length as LONG
        fake_ptr_base_type = ctypes.c_uint64 
        # specific case for c_void_p
        if pointee is None: # VOID pointer type. c_void_p.
            pointee = type(None) # ctypes.c_void_p # ctypes.c_ulong
            clsname = 'c_void'
        else:
            clsname = pointee.__name__
        if clsname in ctypes._pointer_t_type_cache:
            return ctypes._pointer_t_type_cache[clsname]
        # make template
        class _T(_ctypes._SimpleCData,):
            _type_ = 'L'
            _subtype_ = pointee
            def _sub_addr_(self):
                return self.value
            def __repr__(self):
                return '%s(%d)'%(clsname, self.value)
            def contents(self):
                raise TypeError('This is not a ctypes pointer.')
            def __init__(self, **args):
                raise TypeError('This is not a ctypes pointer. It is not instanciable.')
        _class = type('LP_%d_%s'%(8, clsname), (_T,),{}) 
        ctypes._pointer_t_type_cache[clsname] = _class
        return _class

c_int128 = ctypes.c_ubyte*16
c_uint128 = c_int128
void = None
if ctypes.sizeof(ctypes.c_longdouble) == 16:
    c_long_double_t = ctypes.c_longdouble
else:
    c_long_double_t = ctypes.c_ubyte*16



fpga_mgmt_init = _libraries['libfpga_mgmt.so'].fpga_mgmt_init
fpga_mgmt_init.restype = ctypes.c_int32
fpga_mgmt_init.argtypes = []
fpga_mgmt_close = _libraries['libfpga_mgmt.so'].fpga_mgmt_close
fpga_mgmt_close.restype = ctypes.c_int32
fpga_mgmt_close.argtypes = []
fpga_mgmt_strerror = _libraries['libfpga_mgmt.so'].fpga_mgmt_strerror
fpga_mgmt_strerror.restype = POINTER_T(ctypes.c_char)
fpga_mgmt_strerror.argtypes = [ctypes.c_int32]
fpga_mgmt_strerror_long = _libraries['libfpga_mgmt.so'].fpga_mgmt_strerror_long
fpga_mgmt_strerror_long.restype = POINTER_T(ctypes.c_char)
fpga_mgmt_strerror_long.argtypes = [ctypes.c_int32]
uint32_t = ctypes.c_uint32
fpga_mgmt_set_cmd_timeout = _libraries['libfpga_mgmt.so'].fpga_mgmt_set_cmd_timeout
fpga_mgmt_set_cmd_timeout.restype = None
fpga_mgmt_set_cmd_timeout.argtypes = [uint32_t]
fpga_mgmt_set_cmd_delay_msec = _libraries['libfpga_mgmt.so'].fpga_mgmt_set_cmd_delay_msec
fpga_mgmt_set_cmd_delay_msec.restype = None
fpga_mgmt_set_cmd_delay_msec.argtypes = [uint32_t]
class struct_fpga_mgmt_image_info(ctypes.Structure):
    pass

class struct_fpga_meta_ids(ctypes.Structure):
    pass

class struct_afi_device_ids(ctypes.Structure):
    _pack_ = True # source:True
    _fields_ = [
    ('vendor_id', ctypes.c_uint16),
    ('device_id', ctypes.c_uint16),
    ('svid', ctypes.c_uint16),
    ('ssid', ctypes.c_uint16),
     ]

struct_fpga_meta_ids._pack_ = True # source:True
struct_fpga_meta_ids._fields_ = [
    ('afi_id', ctypes.c_char * 64),
    ('afi_device_ids', struct_afi_device_ids),
]

class struct_fpga_slot_spec(ctypes.Structure):
    pass

class struct_fpga_pci_resource_map(ctypes.Structure):
    _pack_ = True # source:True
    _fields_ = [
    ('vendor_id', ctypes.c_uint16),
    ('device_id', ctypes.c_uint16),
    ('subsystem_device_id', ctypes.c_uint16),
    ('subsystem_vendor_id', ctypes.c_uint16),
    ('domain', ctypes.c_uint16),
    ('bus', ctypes.c_ubyte),
    ('dev', ctypes.c_ubyte),
    ('func', ctypes.c_ubyte),
    ('resource_burstable', ctypes.c_bool * 5),
    ('resource_size', ctypes.c_uint64 * 5),
     ]

struct_fpga_slot_spec._pack_ = True # source:True
struct_fpga_slot_spec._fields_ = [
    ('map', struct_fpga_pci_resource_map * 2),
]

class struct_fpga_metrics_common(ctypes.Structure):
    pass

class struct_fpga_ddr_if_metrics_common(ctypes.Structure):
    _pack_ = True # source:True
    _fields_ = [
    ('write_count', ctypes.c_uint64),
    ('read_count', ctypes.c_uint64),
     ]

class struct_fpga_clocks_common(ctypes.Structure):
    _pack_ = True # source:True
    _fields_ = [
    ('frequency', ctypes.c_uint64 * 7),
     ]

struct_fpga_metrics_common._pack_ = True # source:True
struct_fpga_metrics_common._fields_ = [
    ('int_status', ctypes.c_uint32),
    ('pcim_axi_protocol_error_status', ctypes.c_uint32),
    ('dma_pcis_timeout_addr', ctypes.c_uint64),
    ('dma_pcis_timeout_count', ctypes.c_uint32),
    ('pcim_range_error_addr', ctypes.c_uint64),
    ('pcim_range_error_count', ctypes.c_uint32),
    ('pcim_axi_protocol_error_addr', ctypes.c_uint64),
    ('pcim_axi_protocol_error_count', ctypes.c_uint32),
    ('reserved2', ctypes.c_ubyte * 12),
    ('ocl_slave_timeout_addr', ctypes.c_uint64),
    ('ocl_slave_timeout_count', ctypes.c_uint32),
    ('bar1_slave_timeout_addr', ctypes.c_uint64),
    ('bar1_slave_timeout_count', ctypes.c_uint32),
    ('sdacl_slave_timeout_addr', ctypes.c_uint32),
    ('sdacl_slave_timeout_count', ctypes.c_uint32),
    ('virtual_jtag_slave_timeout_addr', ctypes.c_uint32),
    ('virtual_jtag_slave_timeout_count', ctypes.c_uint32),
    ('pcim_write_count', ctypes.c_uint64),
    ('pcim_read_count', ctypes.c_uint64),
    ('ddr_ifs', struct_fpga_ddr_if_metrics_common * 4),
    ('clocks', struct_fpga_clocks_common * 3),
    ('power_mean', ctypes.c_uint64),
    ('power_max', ctypes.c_uint64),
    ('power', ctypes.c_uint64),
    ('cached_agfis', ctypes.c_uint64 * 16),
    ('flags', ctypes.c_uint64),
]

struct_fpga_mgmt_image_info._pack_ = True # source:False
struct_fpga_mgmt_image_info._fields_ = [
    ('status', ctypes.c_int32),
    ('status_q', ctypes.c_int32),
    ('slot_id', ctypes.c_int32),
    ('ids', struct_fpga_meta_ids),
    ('spec', struct_fpga_slot_spec),
    ('sh_version', ctypes.c_uint32),
    ('metrics', struct_fpga_metrics_common),
]

fpga_mgmt_describe_local_image = _libraries['libfpga_mgmt.so'].fpga_mgmt_describe_local_image
fpga_mgmt_describe_local_image.restype = ctypes.c_int32
fpga_mgmt_describe_local_image.argtypes = [ctypes.c_int32, POINTER_T(struct_fpga_mgmt_image_info), uint32_t]
fpga_mgmt_get_status = _libraries['libfpga_mgmt.so'].fpga_mgmt_get_status
fpga_mgmt_get_status.restype = ctypes.c_int32
fpga_mgmt_get_status.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_int32), POINTER_T(ctypes.c_int32)]
fpga_mgmt_get_status_name = _libraries['libfpga_mgmt.so'].fpga_mgmt_get_status_name
fpga_mgmt_get_status_name.restype = POINTER_T(ctypes.c_char)
fpga_mgmt_get_status_name.argtypes = [ctypes.c_int32]
fpga_mgmt_clear_local_image = _libraries['libfpga_mgmt.so'].fpga_mgmt_clear_local_image
fpga_mgmt_clear_local_image.restype = ctypes.c_int32
fpga_mgmt_clear_local_image.argtypes = [ctypes.c_int32]
fpga_mgmt_clear_local_image_sync = _libraries['libfpga_mgmt.so'].fpga_mgmt_clear_local_image_sync
fpga_mgmt_clear_local_image_sync.restype = ctypes.c_int32
fpga_mgmt_clear_local_image_sync.argtypes = [ctypes.c_int32, uint32_t, uint32_t, POINTER_T(struct_fpga_mgmt_image_info)]
fpga_mgmt_load_local_image = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image
fpga_mgmt_load_local_image.restype = ctypes.c_int32
fpga_mgmt_load_local_image.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_char)]
fpga_mgmt_load_local_image_flags = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image_flags
fpga_mgmt_load_local_image_flags.restype = ctypes.c_int32
fpga_mgmt_load_local_image_flags.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_char), uint32_t]
class union_fpga_mgmt_load_local_image_options(ctypes.Union):
    pass

class struct_fpga_mgmt_load_local_image_options_0(ctypes.Structure):
    _pack_ = True # source:False
    _fields_ = [
    ('slot_id', ctypes.c_int32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('afi_id', POINTER_T(ctypes.c_char)),
    ('flags', ctypes.c_uint32),
    ('clock_mains', ctypes.c_uint32 * 3),
     ]

union_fpga_mgmt_load_local_image_options._pack_ = True # source:False
union_fpga_mgmt_load_local_image_options._fields_ = [
    ('reserved', ctypes.c_ubyte * 1024),
    ('_1', struct_fpga_mgmt_load_local_image_options_0),
    ('PADDING_0', ctypes.c_ubyte * 992),
]

fpga_mgmt_init_load_local_image_options = _libraries['libfpga_mgmt.so'].fpga_mgmt_init_load_local_image_options
fpga_mgmt_init_load_local_image_options.restype = ctypes.c_int32
fpga_mgmt_init_load_local_image_options.argtypes = [POINTER_T(union_fpga_mgmt_load_local_image_options)]
fpga_mgmt_load_local_image_with_options = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image_with_options
fpga_mgmt_load_local_image_with_options.restype = ctypes.c_int32
fpga_mgmt_load_local_image_with_options.argtypes = [POINTER_T(union_fpga_mgmt_load_local_image_options)]
fpga_mgmt_load_local_image_sync = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image_sync
fpga_mgmt_load_local_image_sync.restype = ctypes.c_int32
fpga_mgmt_load_local_image_sync.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_char), uint32_t, uint32_t, POINTER_T(struct_fpga_mgmt_image_info)]
fpga_mgmt_load_local_image_sync_flags = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image_sync_flags
fpga_mgmt_load_local_image_sync_flags.restype = ctypes.c_int32
fpga_mgmt_load_local_image_sync_flags.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_char), uint32_t, uint32_t, uint32_t, POINTER_T(struct_fpga_mgmt_image_info)]
fpga_mgmt_load_local_image_sync_with_options = _libraries['libfpga_mgmt.so'].fpga_mgmt_load_local_image_sync_with_options
fpga_mgmt_load_local_image_sync_with_options.restype = ctypes.c_int32
fpga_mgmt_load_local_image_sync_with_options.argtypes = [POINTER_T(union_fpga_mgmt_load_local_image_options), uint32_t, uint32_t, POINTER_T(struct_fpga_mgmt_image_info)]
fpga_mgmt_get_vLED_status = _libraries['libfpga_mgmt.so'].fpga_mgmt_get_vLED_status
fpga_mgmt_get_vLED_status.restype = ctypes.c_int32
fpga_mgmt_get_vLED_status.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_uint16)]
uint16_t = ctypes.c_uint16
fpga_mgmt_set_vDIP = _libraries['libfpga_mgmt.so'].fpga_mgmt_set_vDIP
fpga_mgmt_set_vDIP.restype = ctypes.c_int32
fpga_mgmt_set_vDIP.argtypes = [ctypes.c_int32, uint16_t]
fpga_mgmt_get_vDIP_status = _libraries['libfpga_mgmt.so'].fpga_mgmt_get_vDIP_status
fpga_mgmt_get_vDIP_status.restype = ctypes.c_int32
fpga_mgmt_get_vDIP_status.argtypes = [ctypes.c_int32, POINTER_T(ctypes.c_uint16)]

# values for enumeration 'c__Ea_FPGA_CMD_RSVD'
c__Ea_FPGA_CMD_RSVD__enumvalues = {
    1: 'FPGA_CMD_RSVD',
    2: 'FPGA_CMD_GET_HW_METRICS',
    4: 'FPGA_CMD_CLEAR_HW_METRICS',
    8: 'FPGA_CMD_FORCE_SHELL_RELOAD',
    16: 'FPGA_CMD_DRAM_DATA_RETENTION',
    64: 'FPGA_CMD_EXTENDED_METRICS_SIZE',
    128: 'FPGA_CMD_PREFETCH',
    222: 'FPGA_CMD_ALL_FLAGS',
}
